ThreadSanitizer: data race [@ mozilla::net::nsHttpChannel::OnCacheEntryCheck] vs. [@ ~AutoCacheWaitFlags]
Categories
(Core :: Networking: Cache, defect, P1)
Tracking
()
People
(Reporter: decoder, Assigned: Gankra)
References
(Blocks 1 open bug)
Details
(Whiteboard: [necko-triaged])
Attachments
(3 files)
The attached crash information was detected while running CI tests with ThreadSanitizer on mozilla-central revision 11c9c5ce3955.
At first glance this looks like a read/write race on different parts of the nsHttpChannel
bitfield. If this is a guaranteed read/write race, then this is likely benign and we can suppress it. However, I would like someone from the Necko team to take a look at this and confirm that this cannot cause a write/write race instead.
General information about TSan reports
Why fix races?
Data races are undefined behavior and can cause crashes as well as correctness issues. Compiler optimizations can cause racy code to have unpredictable and hard-to-reproduce behavior.
Rating
If you think this race can cause crashes or correctness issues, it would be great to rate the bug appropriately as P1/P2 and/or indicating this in the bug. This makes it a lot easier for us to assess the actual impact that these reports make and if they are helpful to you.
False Positives / Benign Races
Typically, races reported by TSan are not false positives [1], but it is possible that the race is benign. Even in this case it would be nice to come up with a fix if it is easily doable and does not regress performance. Every race that we cannot fix will have to remain on the suppression list and slows down the overall TSan performance. Also note that seemingly benign races can possibly be harmful (also depending on the compiler, optimizations and the architecture) [2][3].
[1] One major exception is the involvement of uninstrumented code from third-party libraries.
[2] http://software.intel.com/en-us/blogs/2013/01/06/benign-data-races-what-could-possibly-go-wrong
[3] How to miscompile programs with "benign" data races: https://www.usenix.org/legacy/events/hotpar11/tech/final_files/Boehm.pdf
Suppressing unfixable races
If the bug cannot be fixed, then a runtime suppression needs to be added in mozglue/build/TsanOptions.cpp
. The suppressions match on the full stack, so it should be picked such that it is unique to this particular race. The bug number of this bug should also be included so we have some documentation on why this suppression was added.
Reporter | ||
Comment 1•2 years ago
|
||
![]() |
||
Updated•2 years ago
|
![]() |
||
Comment 2•2 years ago
|
||
This is not a write/write race, no. We only read the flags on the background thread, writing happens only on the main thread. Is this enough to do the suppression?
Reporter | ||
Comment 3•2 years ago
|
||
Yes, I will add the suppressions for both stacks :)
Updated•2 years ago
|
Reporter | ||
Comment 5•2 years ago
|
||
I included this change in bug 1612711.
Updated•2 years ago
|
Assignee | ||
Comment 6•2 years ago
|
||
Reopening as this is the bug listed in the supression list for the nsHttpChannel issues, which I was additionally addressing in Bug 1670982. I had to separate out the nsHttpChannel work because new issues rooted in HttpBaseChannel popped up, and changing that requires more work.
Assignee | ||
Comment 7•2 years ago
|
||
This patch has the first half of the work https://phabricator.services.mozilla.com/D93418
Assignee | ||
Comment 8•2 years ago
|
||
Assignee | ||
Comment 9•2 years ago
|
||
Depends on D99306
Comment 10•2 years ago
|
||
Pushed by abeingessner@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/6c73f0d5c424 Make HttpBaseChannel and its children use MOZ_ATOMIC_BITFIELDS. r=valentin,necko-reviewers https://hg.mozilla.org/integration/autoland/rev/898904793b30 Remove supression for fixed issue. r=decoder
Comment 11•2 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/6c73f0d5c424
https://hg.mozilla.org/mozilla-central/rev/898904793b30
Description
•