Bug 1614697 - Remove supression for fixed issue. r=decoder

Differential Revision: https://phabricator.services.mozilla.com/D99307